assets/style.css
/*** Base Styles ***/

body {
    font-family: Gill Sans, Helvetica, sans-serif;
    margin: 0;
    padding: 0;
    background: #f2f2f2;
    color: #232f3e;
}

h1 {
    font-size: 2.7rem;
    font-family: Gill Sans, Helvetica, sans-serif;
}

h2 {
    font-size: 1.8rem;
    font-family: Gill Sans, Helvetica, sans-serif;
}

p {
    letter-spacing: 0.2px;
    line-height: 1.2;
}

.main-container {
    max-width: 2000px;
    margin: 0 auto;
}


/*** Title ***/

.title-container {
    height: auto;
    padding: 8rem 0;
    justify-content: center;
    align-items: center;
    text-align: center;
    background-color: #232f3e;
}

.title-container h1 {
    color: #f2f2f2;
    margin-top: 1.5rem;
    font-size: 450%;
}

.subtitle {
    color: #bbbbbb;
    margin: 1.1rem auto 0 auto;
    font-size: 140%;
    font-weight: 300;
}

.read-more-button {
    display: inline-block;
    background-color: #ff9900;
    color: #f2f2f2;
    padding: 0.8rem 1.5rem;
    border-radius: 15px;
    text-decoration: none;
    font-size: 120%;
    font-weight: 700;
    margin-top: 4.5rem;
}

.read-more-button:hover {
    background-color: #cc7a00; /* Darker orange on hover */
}

html {
    scroll-behavior: smooth;
}


/*** Project Overview ***/

.overview-container {
    display: flex; 
    flex-direction: row; 
    flex-wrap: wrap;
    align-items: start;
    padding: 3rem 6rem 0 6rem;
    justify-content: center;
}

.overview-content-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 50%;
    margin-bottom: 0.5rem;
    box-sizing: border-box; 
}

.overview-content-container h2 {
    width: 100%;
    text-align: center;
}

.image-container {
    display: flex;
    justify-content: center;
    align-items: flex-end;
    height: 120px;
    width: 100%;
}

.image-container img {
    height: 70px;
    width: auto;
    object-fit: contain;
    width: auto; 
}

.overview-content-container p {
    width: 80%;
    min-height: 6rem;
    font-size: 115%;
    letter-spacing: 0.3px;
    line-height: 1.5;
    overflow-y: auto;
}

/* Responsive adjustments for smaller screens */
@media (max-width: 768px) {
    .overview-container {
        padding: 3rem 2rem 0 2rem;
    }

    .overview-content-container {
        width: 100%; /* Full width */
        min-height: auto; /* Removes minimum height restriction */
        padding-bottom: 1rem;
    }

    .overview-content-container p {
        width: 100%;
        min-height: auto;
    }
}





/*** Problems & Opportunities ***/

.problem-container {
    margin-bottom: 0rem;
}

.problem-hr-top {
    width: 30%;
    border: none;
    height: 1.5px;
    background-color: #92a0b0;
    margin: 5rem auto 2rem auto;
}

.problem-container h1 {
    text-align: center;
    margin: 4rem auto;
}

.problem-boxes-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    gap: 2rem;
    flex-wrap: wrap;
    margin: 2rem auto 3rem auto;
}

.problem-box {
    background-color: #e4e7ea;
    padding: 20px;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
    width: 500px;
    margin: 0 3rem 2rem 3rem;
    box-sizing: border-box; /* Includes padding and border in the width */
    display: flex;
    flex-direction: column; 
    justify-content: center;
    align-items: center;
    text-align: center;
}

.problem-box img {
    width: auto;
    height: 150px;
    margin-top: 3rem;
    margin-bottom: 2rem;
}

.problem-box h3 {
    color: #232f3e;
    font-size: 150%;
    margin: 1rem auto;
}

.problem-box p {
    width: 90%;
    color: #666;
    font-size: 100%;
    letter-spacing: 0.1px;
    line-height: 1.5;
}

.problem-box:hover {
    transform: scale(1.05); /* Slightly enlarge the box on hover */
}



/*** Solution ***/
.solution-hr-top {
    width: 30%;
    border: none;
    height: 1.5px;
    background-color: #92a0b0;
    margin: 0.5rem auto 4rem auto;
}

.solution-container {
    height: auto;
    padding: 1rem 6rem 0 6rem;
    margin: 0rem auto 1rem auto;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.solution-container img {
    width: 80%;
    height: auto; 
    display: block;
    margin: 3rem auto;
}

@media (max-width: 768px) {
    .solution-container {
        padding: 3rem 2rem 0 2rem;
    }

    .solution-container img {
        width: 90%;
    }
}


/*** Solution Content ***/ 

.solution-content-container {
    display: flex;
    align-items: flex-start;
    justify-content: space-between;
    margin-bottom: 1rem;
    padding-bottom: 1rem;
}

.image-container {
    flex: 3;
    margin-right: 1.5rem; 
}

.image-container img {
    width: 90%;
    height: 100px;
    object-fit: scale-down;
}

.text-container {
    flex: 17;
}

.text-container h3, .text-container p {
    margin-bottom: 1rem; 
}

.text-container p {
    text-align: justify;
}



/*** Research ***/

.research-container {
    height: auto;
    padding: 1.5rem 8rem 0 8rem;
    margin: 1rem auto 0 auto;

}

.research-container h2 {
    margin-bottom: 2rem;
}

.research-container p {
    font-size: 115%;
    letter-spacing: 0.3px;
    line-height: 1.5;
}

.research-container ul {
    font-size: 115%;
    letter-spacing: 0.3px;
    line-height: 1.5;
}

@media (max-width: 768px) {
    .research-container {
        padding: 1.5rem 2rem 0 2rem;
    }
}



/*** Design ***/

.design-container {
    height: auto;
    padding: 1.5rem 8rem 0 8rem;
    margin: 0 auto 5rem auto;
}

.design-container h2 {
    margin-bottom: 2rem;
}

.design-container p {
    font-size: 115%;
    letter-spacing: 0.3px;
    line-height: 1.5;
}

.design-container ul {
    font-size: 115%;
    letter-spacing: 0.3px;
    line-height: 1.5;
}

@media (max-width: 768px) {
    .design-container {
        padding: 1.5rem 2rem 0 2rem;
    }
}



/*** Prototype ***/

.prototype-container {
    height: auto;
    padding: 3rem 8rem 3rem 8rem;
    margin: 0 auto;
    background-color: #232f3e;
    color: #f2f2f2;
}
/* ... */

